Bug 1871343 - Ensure attachment list properly scrolls overflowing items. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D197085

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -489,6 +489,7 @@ button.email-action-button:focus-visible {
   justify-content: stretch;
   /* Allow the area to shrink. */
   min-width: 0;
+  overflow: hidden;
 }
 
 #attachmentView,
